# Batamanta

./: .credo.exs  .dialyzer-ignore-warnings  .gitignore  .tool-versions  AGENTS.md  CHANGELOG.md  LICENSE.md  README.md  README_ES.md  docker_matrix_simple.sh  mix.exs  smoke_test_runner.sh  xref_graph.dot.bak
.github/workflows/: ci.yml
docs/: AUDIT-rust-architecture.md
lib/: batamanta.ex
lib/batamanta/: application.ex  banner.ex  env_cleaner.ex  escript_builder.ex  escript_packager.ex  logger.ex  packager.ex  run_script.ex  runner.ex  rust_template.ex  target.ex  validator.ex
priv/erts_repository/: MANIFEST.json
priv/rust_template/: Cargo.toml  build.rs
priv/rust_template/src/: main.rs
scripts/: test_banner.exs
smoke_test/: mix.exs  run_smoke_test.sh
smoke_test/config/: cli.exs  daemon.exs  tui.exs
smoke_test/lib/: smoke_test.ex
smoke_tests/: .gitignore  smoke_tests.sh
smoke_tests/test_cli/: .formatter.exs  mix.exs  vm.args
smoke_tests/test_daemon/: daemon.pid  daemon_alive.txt  daemon_custom.txt  daemon_test_result.txt  mix.exs  vm.args
smoke_tests/test_escript/: mix.exs  test_escript
smoke_tests/test_escript_otp26/: mix.exs
smoke_tests/test_release_cli/: mix.exs
smoke_tests/test_release_nif/: mix.exs
smoke_tests/test_release_otp27/: mix.exs
smoke_tests/test_tui/: mix.exs
test/: batamanta_test.exs  smoke_test.exs  test_helper.exs  test_httpc.exs
test/batamanta/: banner_test.exs  batamanta_test.exs  escript_builder_test.exs  escript_packager_test.exs  logger_test.exs  packager_test.exs  runner_test.exs  rust_template_test.exs  (+4 more)
(+26 files in other folders)
