[package]
name = "batamanta_dispenser"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
indicatif = "0.17"
tar = "0.4.40"
zstd = "0.13"
nix = "0.26"

[profile.release]
opt-level = "z"     # Optimizar para tamaño
lto = true          # Link Time Optimization para reducir aún más el binario
codegen-units = 1   # Mayor optimización a costa de tiempo de compilación
strip = true        # Quitar símbolos de debug
